--- a/sets-and-functions.html
+++ b/sets-and-functions.html
@@ -29,7 +29,7 @@ set in the _output.yml file.</p>" />
 <meta name="author" content="Jo Evans" />
 
 
-<meta name="date" content="2024-10-09" />
+<meta name="date" content="2024-10-11" />
 
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="apple-mobile-web-app-capable" content="yes" />
@@ -101,12 +101,12 @@ set in the _output.yml file.</p>" />
 </ul></li>
 <li class="chapter" data-level="4" data-path="relations.html"><a href="relations.html"><i class="fa fa-check"></i><b>4</b> Relations</a>
 <ul>
-<li class="chapter" data-level="4.1" data-path="relations.html"><a href="relations.html#equivalence-relations-equivalence-classes-and-quotients"><i class="fa fa-check"></i><b>4.1</b> Equivalence relations, Equivalence classes and Quotients</a>
+<li class="chapter" data-level="4.1" data-path="relations.html"><a href="relations.html#equivalence-relations-equivalence-classes-and-quotients"><i class="fa fa-check"></i><b>4.1</b> Equivalence relations, Equivalence classes and Quotients</a></li>
+<li class="chapter" data-level="4.2" data-path="relations.html"><a href="relations.html#order-relations"><i class="fa fa-check"></i><b>4.2</b> Order relations</a>
 <ul>
-<li class="chapter" data-level="4.1.1" data-path="relations.html"><a href="relations.html#quotients"><i class="fa fa-check"></i><b>4.1.1</b> Quotients</a></li>
+<li class="chapter" data-level="4.2.1" data-path="relations.html"><a href="relations.html#quotients"><i class="fa fa-check"></i><b>4.2.1</b> Quotients</a></li>
 </ul></li>
-<li class="chapter" data-level="4.2" data-path="relations.html"><a href="relations.html#integers-via-quotients"><i class="fa fa-check"></i><b>4.2</b> Integers via quotients</a></li>
-<li class="chapter" data-level="4.3" data-path="relations.html"><a href="relations.html#order-relations"><i class="fa fa-check"></i><b>4.3</b> Order relations</a></li>
+<li class="chapter" data-level="4.3" data-path="relations.html"><a href="relations.html#integers-via-quotients"><i class="fa fa-check"></i><b>4.3</b> Integers via quotients</a></li>
 <li class="chapter" data-level="4.4" data-path="relations.html"><a href="relations.html#modular-arithmetic"><i class="fa fa-check"></i><b>4.4</b> Modular arithmetic</a></li>
 </ul></li>
 <li class="chapter" data-level="5" data-path="logic.html"><a href="logic.html"><i class="fa fa-check"></i><b>5</b> Logic</a>
